src/App.css
header {
	background-color: var(--darker-background-colour);
	display: flex;
	justify-content: center;
	align-items: center;
	padding-block: 0.5rem;
}

.title {
	color: white;
}

section {
	padding-top: 1rem;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: 3rem;
	margin-bottom: 5rem;
}

.options-container {
	display: flex;
	justify-content: center;
	gap: 5em;
	padding: 1rem;
	border-radius: 1rem;
	background-color: rgba(255, 255, 255, 0.4);
	backdrop-filter: blur(0.2rem);
}

.option {
	display: flex;
	align-items: center;
	justify-content: right;
	gap: 0.5rem;
	font-size: 1.5rem;
}

#note-select {
	width: 10rem;
}

#scale-select {
	width: 17rem;
}

.scales-container {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 75%;
	flex-wrap: wrap;
	gap: 2rem;
}

@media (max-width: 820px) {
	.scales-container {
		width: 90%;
	}
}

@media (max-width: 800px) {
	.options-container {
		gap: 3em;
	}

	.option {
		gap: 0.3rem;
		font-size: 1rem;
	}

	#note-select {
		width: 8rem;
	}

	#scale-select {
		width: 12rem;
	}
}

@media (max-width: 570px) {
	.options-container {
		flex-direction: column;
		align-items: flex-end;
		gap: 1rem;
	}

	#note-select {
		width: 12rem;
	}
}

